fix(copilot): comment variable usage, fix background hierarchy
I added comments to describe what I found each of the variables doing so we know roughly what they affect. Some I couldn't figure out, e.g. --color-accent-250. I also changes the shades of crust/mantle/base/surface for the primary element backgrounds to have a better hierarchy, see how it looks yourself.

--- a/styles/microsoft-copilot/catppuccin.user.less
+++ b/styles/microsoft-copilot/catppuccin.user.less
@@ -33,15 +33,16 @@
     #lib.css-variables();
 
     /* stylelint-disable function-no-unknown */
-    --color-background-100: .spaced-rgbify(@mantle) [];
-    --color-background-150: .spaced-rgbify(@base) [];
-    --color-background-200: .spaced-rgbify(@crust) [];
-    --color-background-250: .spaced-rgbify(@crust) [];
+    --color-background-100: .spaced-rgbify(@mantle) []; // page/sidebar background
+    --color-background-150: .spaced-rgbify(@base) []; // conversation background
+    --color-background-200: .spaced-rgbify(@surface0) []; // conversation input
+    --color-background-250: .spaced-rgbify(@crust) []; // elevated modals
     --color-background-650: .spaced-rgbify(@overlay1) [];
     --color-background-700: .spaced-rgbify(@overlay1) [];
     --color-background-800: .spaced-rgbify(@overlay0) [];
-    --color-background-850: .spaced-rgbify(@surface0) [];
+    --color-background-850: .spaced-rgbify(@text) []; // inverted tooltip (in response editor)
 
+    --color-foreground-100: .spaced-rgbify(@base) []; // inverted tooltip (in response editor)
     --color-foreground-250: .spaced-rgbify(@text) [];
     --color-foreground-450: .spaced-rgbify(@subtext0) [];
     --color-foreground-550: .spaced-rgbify(@subtext1) [];
@@ -63,7 +64,7 @@
     --color-muted-550: .spaced-rgbify(@crust) [];
 
     --color-accent-150: .spaced-rgbify(@crust) [];
-    --color-accent-200: .spaced-rgbify(@crust) [];
+    --color-accent-200: .spaced-rgbify(@surface0) []; // user prompts 
     --color-accent-250: .spaced-rgbify(@crust) [];
     --color-accent-350: .spaced-rgbify(@accent) [];
     --color-accent-550: .spaced-rgbify(@accent) [];
