fix(chatgpt): chat input prompt border

--- a/styles/chatgpt/catppuccin.user.less
+++ b/styles/chatgpt/catppuccin.user.less
@@ -72,6 +72,10 @@
       --icon-tertiary: @overlay2;
 
       --text-status-error: @red;
+    
+      // chat input prompt border
+      --shadow-color-1: fade(@mantle, 50%);
+      --shadow-color-2: fade(@text, 80%);
 
       .__menu-item[data-color="danger"] {
         --menu-item-highlighted: fade(@red, 20%);
