--- a/styles/codeberg/catppuccin.user.less
+++ b/styles/codeberg/catppuccin.user.less
@@ -41,30 +41,44 @@
 
   #catppuccin(@flavor) {
     #lib.palette();
-    // #lib.defaults(); // Not needed, themed in upstream Gitea port.
+    // Below is unneeded, themed in upstream Gitea port.
+    // #lib.defaults();
 
-    --color-body: @base;
-    --color-nav-text: @crust;
-    --color-nav-hover-bg: darken(@accent, 5%);
-    --color-secondary-nav-bg: @surface0;
-    --color-link: @blue;
-    --color-footer-text: @text;
-
-    .ui.secondary.menu .dropdown.item:hover,
-    .ui.secondary.menu a.item:hover,
-    .ui.secondary.menu a.active.item:hover {
-      background-color: var(--color-nav-hover-bg);
-      color: var(--color-black);
+    // ACTIVE BUTTONS THAT ARE MISTHEMED FOR TEXT
+    :is(
+      .ui.pagination.menu,
+      .editor-toolbar,
+      .switch,
+      .ui.vertical.menu,
+      .ui.dropdown .menu,
+      .ui.secondary.menu,
+      .ui.menu .ui.dropdown .menu
+    )
+      .active.item,
+    .ui.button.active,
+    .ui.basic.buttons .button.active,
+    .active:is(
+      :is(details.dropdown > .content > ul > li)
+        > :is(
+          a,
+          button
+        )
+    ),
+    details.dropdown[open] > summary,
+    details.dropdown
+      > .content
+      > ul
+      > li:focus-within
+      > :is(
+        a,
+        button
+      ) {
+      color: @base !important;
+      background-color: @accent !important;
     }
 
-    .ui.basic.red.buttons .button,
-    .ui.basic.red.button {
-      &:hover,
-      &:focus {
-        background-color: @red;
-        border-color: var(--color-light-border);
-        color: @crust;
-      }
+    .ui:is(.red, .green).button {
+      color: @base !important;
     }
 
     // HUNK HEADER
@@ -77,6 +91,46 @@
       }
     }
 
+    // shasum right side bg override
+    .sha.label .signature {
+      --color-light: fade(@green, 30%);
+    }
+
+    .is-loading::after {
+      border-color: @overlay0 @overlay0 @text @text;
+    }
+
+    // input focus border
+    input:focus,
+    textarea:focus,
+    .ui.input input:focus,
+    .ui.form input:not([type]):focus,
+    .ui.form select:focus,
+    .ui.form textarea:focus,
+    .ui.form input[type="date"]:focus,
+    .ui.form input[type="datetime-local"]:focus,
+    .ui.form input[type="email"]:focus,
+    .ui.form input[type="file"]:focus,
+    .ui.form input[type="number"]:focus,
+    .ui.form input[type="password"]:focus,
+    .ui.form input[type="search"]:focus,
+    .ui.form input[type="tel"]:focus,
+    .ui.form input[type="text"]:focus,
+    .ui.form input[type="time"]:focus,
+    .ui.form input[type="url"]:focus,
+    .ui.selection.dropdown:focus {
+      border-color: var(--color-active) !important;
+    }
+
+    // DROPDOWN OVERRIDES
+    .ui.secondary.menu .dropdown.item:hover,
+    .ui.secondary.menu a.item:hover,
+    .ui.secondary.menu a.active.item:hover {
+      background-color: var(--color-nav-hover-bg);
+      color: var(--color-black);
+    }
+
+    // LOGOS
     #codeberg-logo(@color) {
       @svg: escape(
         '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"><defs><linearGradient id="b" x1="42519.285" x2="42575.336" y1="-7078.7891" y2="-6966.9312" gradientUnits="userSpaceOnUse" href="#a"/><linearGradient id="a"><stop color="@{color}" offset="0" stop-opacity="0"/><stop offset=".495" stop-color="@{color}" stop-opacity=".3"/><stop offset="1" stop-color="@{color}" stop-opacity=".3"/></linearGradient></defs><path fill="url(#b)" d="M42519.285-7078.79a.76.568 0 0 0-.738.675l33.586 125.888a87.2 87.2 0 0 0 39.381-33.763l-71.565-92.52a.76.568 0 0 0-.664-.28" transform="translate(-5840.572 980.524)scale(.13766)"/><path fill="@{color}" d="M12.003.525A12.003 12.003 0 0 0 0 12.533 11.9 11.9 0 0 0 1.826 18.9L11.838 5.956c.068-.09.25-.09.324 0l10.007 12.939A11.9 11.9 0 0 0 24 12.522 12.003 12.003 0 0 0 12.003.525"/></svg>'
@@ -174,6 +228,7 @@
     }
 
     // HOMEPAGE
+
     main {
       a.button {
         svg {
