--- a/styles/codeberg/catppuccin.user.less
+++ b/styles/codeberg/catppuccin.user.less
@@ -122,6 +122,14 @@
       border-color: var(--color-active) !important;
     }
 
+    .ui.secondary.pointing.menu .active.item,
+    .ui.secondary.pointing.menu .active.item:hover,
+    .ui.secondary.pointing.menu .active.item:focus,
+    .ui.secondary.pointing.menu .dropdown.item:hover,
+    .ui.secondary.pointing.menu .dropdown.item:focus {
+      color: var(--color-text-dark);
+    }
+
     // DROPDOWN OVERRIDES
     .ui.secondary.menu .dropdown.item:hover,
     .ui.secondary.menu a.item:hover,
