--- a/styles/codeberg/catppuccin.user.less
+++ b/styles/codeberg/catppuccin.user.less
@@ -91,8 +91,11 @@
       }
     }
 
-    // shasum right side bg override
-    .sha.label .signature {
+    .sha.label.isSigned.isVerified {
+      color: @green;
+    }
+
+    .sha.label.isSigned.isVerified .signature {
       --color-light: fade(@green, 30%);
     }
 
