feat: add some css variables

--- a/styles/galileo/catppuccin.user.less
+++ b/styles/galileo/catppuccin.user.less
@@ -38,6 +38,28 @@
     #lib.palette();
     #lib.defaults();
 
+    --blue: @sky;
+    --indigo: darken(@mauve, 5%);
+    --purple: @mauve;
+    --pink: @pink;
+    --red: @red;
+    --orange: @peach;
+    --yellow: @yellow;
+    --green: @green;
+    --teal: @teal;
+    --cyan: @sapphire;
+    --white: #fff;
+    --gray: #6c757d;
+    --gray-dark: #343a40;
+    --primary: @blue;
+    --secondary: #6c757d;
+    --success: @green;
+    --info: @sapphire;
+    --warning: @yellow;
+    --danger: @red;
+    --light: #f8f9fa;
+    --dark: #343a40;
+
     w .col .card .card-body h5.card-title a,
     .twitter-typeahead header #header-container .navbar.top #choose-view.show .tt-menu .row .col .card .card-body h5.card-title a,
     header #header-container .navbar.top .no-js .btn-group:focus-within #choose-view.dropdown-menu .twitter-typeahead .tt-menu .row .col .card .card-body h5.card-title a,
