fix: change border-bottom to border-bottom-color

--- a/styles/galileo/catppuccin.user.less
+++ b/styles/galileo/catppuccin.user.less
@@ -181,7 +181,7 @@
     }
 
     header #header-container .navbar.bottom .navbar-collapse ul.navbar-nav li.nav-item {
-      border-bottom:1px solid #E0E0FA;
+      border-bottom-color:#E0E0FA;
     }
 
     header #header-container .navbar.bottom .navbar-collapse ul.navbar-nav li.nav-item a.nav-link {
